<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editCalories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_calories"
        android:inputType="number"
        android:padding="16dp" />

    <EditText
        android:id="@+id/editDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_date"
        android:inputType="date"
        android:padding="16dp" />

    <EditText
        android:id="@+id/editFood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_food"
        android:padding="16dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/photo_preview"
        android:scaleType="centerCrop"
        android:visibility="gone" /> <!-- Initially hidden -->

    <Button
        android:id="@+id/buttonAddPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_photo"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" /> <!-- Added bottom margin -->

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:padding="16dp" />
</LinearLayout>
